@@ -34,7 +34,6 @@ import org.bitrepository.protocol.utils.AllureTestUtils;
 import static org.bitrepository.protocol.utils.AllureTestUtils.addDescription;
 import static org.bitrepository.protocol.utils.AllureTestUtils.addStep;
 
-
 public class ArgumentValidatorTest {
     @Test @Tag("regressiontest")
     public void testArgumentValidatorObject() throws Exception {
@@ -49,7 +48,8 @@ public class ArgumentValidatorTest {
         }
     }
         
-    @Test @Tag("regressiontest" )
+    @Test
+    @Tag("regressiontest" )
     public void testArgumentValidatorString() throws Exception {
         addDescription("Test the argument validator for arguments for strings");
         addStep("Test empty string", "Should only throw an exception when the string is null or empty");
@@ -68,7 +68,8 @@ public class ArgumentValidatorTest {
         }
     }
 
-    @Test @Tag("regressiontest" )
+    @Test
+    @Tag("regressiontest" )
     public void testArgumentValidatorInteger() throws Exception {
         addDescription("Test the argument validator for arguments for integers");
         addStep("Test not negative", "Should only throw an exception if the integer is negative");
@@ -96,7 +97,8 @@ public class ArgumentValidatorTest {
         }
     }
 
-    @Test @Tag("regressiontest")
+    @Test
+    @Tag("regressiontest")
     public void testArgumentValidatorLong() throws Exception {
         addDescription("Test the argument validator for arguments for longs");
         addStep("Test not negative", "Should only throw an exception if the long is negative");
@@ -124,7 +126,8 @@ public class ArgumentValidatorTest {
         }
     }
     
-    @Test @Tag("regressiontest" )
+    @Test
+    @Tag("regressiontest" )
     public void testArgumentValidatorCollection() throws Exception {
         addDescription("Test the argument validator for arguments for collections");
         addStep("Check against null or empty collection", "Should throw exception exception when non-empty collection");
@@ -140,10 +143,11 @@ public class ArgumentValidatorTest {
         } catch (IllegalArgumentException e) {
             // expected
         }
-        ArgumentValidator.checkNotNullOrEmpty(Arrays.asList("NO FAILURE"), "No exception expected.");
+        ArgumentValidator.checkNotNullOrEmpty(List.of("NO FAILURE"), "No exception expected.");
     }
     
-    @Test @Tag("regressiontest" )
+    @Test
+    @Tag("regressiontest" )
     public void testArgumentValidatorArrays() throws Exception {
         addDescription("Test the argument validator for arguments for arrays");
         addStep("Check against null or empty arrays", "Should throw exception exception when non-empty array");
@@ -162,7 +166,8 @@ public class ArgumentValidatorTest {
         ArgumentValidator.checkNotNullOrEmpty(new Object[]{"NO FAILURE"}, "No exception expected.");
     }
 
-    @Test @Tag("regressiontest")
+    @Test
+    @Tag("regressiontest")
     public void testArgumentValidatorBoolean() throws Exception {
         addDescription("Test the argument validator for arguments for booleans");
         addStep("validate checkTrue", "Should fail when false.");
